# hand-pose-estimation

./: .gitignore  README.md  pyproject.toml  run.py
notebooks/: baseline_mediapipe.ipynb  hand_pose_estimation.ipynb  path-1-pose-hand-EDA.ipynb  path-2-pose-hand-Train.ipynb  path-3-pose-hand-analytics.ipynb
src/: main.py  mediapipe_model.py  utils.py
