[tool.poetry]
name = "hand-pose-estimation"
version = "0.1.0"
description = ""
authors = ["Shakirov Renat <renatshk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.1"
jupyter = "^1.0.0"
mediapipe = "^0.10.0"
opencv-python = "^4.7.0.72"


[tool.poetry.group.dev.dependencies]
matplotlib = "^3.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
